--- a/src/assets/styles/app/theme.scss
+++ b/src/assets/styles/app/theme.scss
@@ -1,8 +1,8 @@
-$color-primary:   #22d7bb;
-$color-primary-active:   #189582;
-$color-primary-hover: rgba(34, 215, 187, 0.5);
-$color-primary-active-hover:  rgba(24, 149, 130, 0.5);
-$color-primary-bg :  rgba(34, 215, 187, 0.2);
+$color-primary:   #fc9272;
+$color-primary-active:   #ef3b2c;
+$color-primary-hover: #fc927280;
+$color-primary-active-hover:  #ef3b2c80;
+$color-primary-bg : #fc927225;
 
 $color-success : #22d7bb;
 $color-warning : #ffc442;
