--- a/src/assets/styles/app/theme.scss
+++ b/src/assets/styles/app/theme.scss
@@ -1,9 +1,9 @@
-$color-primary:   #fc9272;
-$color-primary-active:   #ef3b2c;
-$color-primary-hover: #fc927280;
-$color-primary-active-hover:  #ef3b2c80;
-$color-primary-bg : #fc927225;
+$color-primary:   rgb(252,146,114);
+$color-primary-active:   rgb(239,59,44);
+$color-primary-hover: rgba(252,146,114,0.5);
+$color-primary-active-hover:  rgba(239,59,44,0.5);
+$color-primary-bg : rgba(252,146,114,0.2);
 
-$color-success : #22d7bb;
-$color-warning : #ffc442;
-$color-danger : #ff5b57;
+$color-success : rgb(34,215,187);
+$color-warning : rgb(255,196,66);
+$color-danger : rgb(255,91,87);
