--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,5 +16,7 @@
 @import "./assets/styles/bootstrap.scss";
 //== FontAwesome
 @import "./assets/styles/fontawesome/css/fontawesome-all.css";
+//== zorro
+@import './assets/styles/ng-zorro-antd.css';
 //== Application
 @import "./assets/styles/app.scss";
