--- a/src/app/routes/dashboard/search/search.component.html
+++ b/src/app/routes/dashboard/search/search.component.html
@@ -16,9 +16,9 @@
     <div class="panel" style="margin-top: 10px;">
       <div class="panel-body">
         <div class="search-area">
-          <nz-month-picker style="margin-right:5px;" [(ngModel)]="option.start_date" [nzPlaceholder]="'选择月份'" [nzAllowClear]="false"></nz-month-picker>
-          <nz-date-picker style="margin-right:5px;" [(ngModel)]="option.start_date" [nzPlaceholder]="'选择日期'"></nz-date-picker>
-          <nz-date-picker style="margin-right:5px;" [(ngModel)]="option.start_date" [nzPlaceholder]="'选择时间'" [nzFormat]="'YYYY-MM-DD HH:mm:ss'" [nzShowTime]="true"></nz-date-picker>
+          <nz-month-picker style="margin-right:5px;" [(ngModel)]="option.start_date" [nzPlaceHolder]="'选择月份'" [nzAllowClear]="false"></nz-month-picker>
+          <nz-date-picker style="margin-right:5px;" [(ngModel)]="option.start_date" [nzPlaceHolder]="'选择日期'"></nz-date-picker>
+          <nz-date-picker style="margin-right:5px;" [(ngModel)]="option.start_date" [nzPlaceHolder]="'选择时间'" [nzFormat]="'YYYY-MM-DD HH:mm:ss'" [nzShowTime]="true"></nz-date-picker>
           <div class="search-space"></div>
           <div class="search-input search-input-sm">
             <i class="fas fa-search search-icon"></i>
