--- a/src/assets/styles/app/module.scss
+++ b/src/assets/styles/app/module.scss
@@ -21,6 +21,7 @@
     position: relative;
     background: #fdfdfd;
     display: flex;
+    align-items: center;
 }
 .module-content .module-header .module-header-title {
     line-height: 50px;
