--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -23,5 +23,6 @@
         <span class="avatar-text" tooltip="退出登录">
             <i class="fas fa-sign-out-alt" (click)="logout()" ></i>
         </span>
+        <div class="version">V 1.0.0</div>
     </div>
 </div>
