--- a/src/assets/styles/app/checkbox.scss
+++ b/src/assets/styles/app/checkbox.scss
@@ -11,8 +11,8 @@
   transition: border-color ease .2s;
 }
 .ngg-checkbox .checked:before{
-  -webkit-box-shadow: 1px 0 0 3px #f3f3f3;
-  box-shadow: 1px 0 0 3px #f3f3f3;
+/*  -webkit-box-shadow: 1px 0 0 3px #f3f3f3;
+  box-shadow: 1px 0 0 3px #f3f3f3;*/
   top: 10px;
   left: 9px;
   -webkit-transform: rotate(-130deg) scale(.8);
