--- a/src/app/login/login/login.component.css
+++ b/src/app/login/login/login.component.css
@@ -27,6 +27,10 @@
 .login-logo{
     margin-bottom: 30px;
 }
+.login-title{
+    margin-top:0px;
+    margin-bottom: 40px;
+}
 .login-panel-shadow{
     -webkit-box-shadow: 0 9px 30px -6px rgba(0,0,0,.2), 0 18px 20px -10px rgba(0,0,0,.04), 0 18px 20px -10px rgba(0,0,0,.04), 0 10px 20px -10px rgba(0,0,0,.04);
     -moz-box-shadow: 0 9px 30px -6px rgba(0,0,0,.2),0 18px 20px -10px rgba(0,0,0,.04),0 18px 20px -10px rgba(0,0,0,.04),0 10px 20px -10px rgba(0,0,0,.04);
