--- a/src/assets/styles/app/system.scss
+++ b/src/assets/styles/app/system.scss
@@ -37,6 +37,10 @@ html, body {
     line-height: 50px;
     font-size: 16px;
 }
+.system-content .system-left .system-left-header .action{
+    float: right;
+    margin: 10px 20px;
+}
 .system-content .system-left .system-left-header .more{
     float: right;
     margin: 0 20px;
