--- a/src/app/shared/component/checkbox/checkbox.component.html
+++ b/src/app/shared/component/checkbox/checkbox.component.html
@@ -1,3 +1,3 @@
-<a class="ngg-checkbox" (click)="checked = !checked;">
+<a class="ngg-checkbox" (click)="toggle()">
   <i *ngIf="checked" class="checked"></i>
 </a>
