--- a/src/assets/styles/app/avatar.scss
+++ b/src/assets/styles/app/avatar.scss
@@ -58,4 +58,11 @@
     line-height: 28px;
     font-size: 14px;
 }
+
+.avatar-text-xs {
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    font-size: 12px;
+}
 /** avatar end **/
