--- a/src/assets/styles/app/list.scss
+++ b/src/assets/styles/app/list.scss
@@ -12,7 +12,7 @@
     display: grid;
 }
 .list .list-body{
-    max-height: 250px;
+    //max-height: 250px;
     overflow-y: auto;
 }
 .list .list-grid-item{
