--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
     <div class="sidebar-header">
         <a class="team-logo">
             <img width="40" align="center" [tooltip]="configService.app.title" placement="bottom"
-                 src="http://7xlblb.dl1.z0.glb.clouddn.com/logo-guangda.png">
+                 src="assets/img/common/logo-light.png">
         </a>
     </div>
     <div class="sidebar-body">
